@@ -16,7 +16,7 @@ FilePeruser User Guide
                          minimum log level to be written to file.
        -p or --printlevel: next argument is an integer representing
                          minimum level of log message to be printed.
-       -n or --no-case: perform search without case-sensitivity
+       -n or --no-case: perform search without case-sensitivity (only if strcasestr is available)
        -1 or --single-match: match search string at most once per line.
    Notes:
        all spaces in [search string], [root directory], and any excluded
