@@ -12,6 +12,7 @@
 #include "dir_list.h"
 #include "search.h"
 #include <string.h>
+#include "config.h"
 
 /**
  * Initializes the settings to their default values.
@@ -24,7 +25,9 @@ void init_settings(){
     settings.base_search_path_length = 0;
     settings.root_dirs = 0;
     settings.search_string = 0;
+#ifdef HAVE_STRCASESTR
     settings.comp_func = strstr;
+#endif
     settings.file_parser = parse_file;
     settings.output_file = 0;
     settings.log_file = "fileperuser.log";
